fix button align text

--- a/project/public/wp-content/themes/lemonnier/src/scss/components/pages.scss
+++ b/project/public/wp-content/themes/lemonnier/src/scss/components/pages.scss
@@ -724,7 +724,7 @@ a.type-card {
   font-size: 1.2rem;
   line-height: 1.8rem;
   p {
-    text-align: center;
+    text-align: center !important;
   }
   .arrow {
     width: 12%;
